chore: fix updating teams

--- a/Bets4Fun/Main.Master
+++ b/Bets4Fun/Main.Master
@@ -31,7 +31,7 @@
         <div class="main-flex-container">
             <div class="main-flex-top">
                 <div class="top-image">
-                    <img alt="image" src="/App_Themes/Default/Images/euro2024/png.jpg" />
+                    <img alt="image" src="/App_Themes/Default/Images/euro2024/logo.png" />
                 </div>
                 <h1 class="m-2">Bets4Fun</h1>
    
