--- a/Bets4Fun/App_Themes/Default/bets4fun.css
+++ b/Bets4Fun/App_Themes/Default/bets4fun.css
@@ -65,6 +65,7 @@ body {
         background-color: transparent;
         width: 100%;
         max-width: 570px;
+        height: auto;
     }
 
     .login-image {
@@ -76,7 +77,7 @@ body {
         }
 
     .login-options {
-        bottom: 15px;
+        position: relative;
     }
 }
 
